--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
 
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.patloew.rxlocation:rxlocation:1.0.4'
+
+    implementation 'com.google.dagger:dagger:2.7'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.7'
 }
